5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/4189/executions/1716_2505.log
== SUBMITION (2019-05-14 16:37:01) 
-- CODE:
from math import *
x=eval(input("x:"))
k=int(input("k:"))
contador=1
sinal=-1
resultado = x
expoente=3
while=(contador<k):
	resultado=resultado+(sinal*(x**expoente/factorial(expoente)))
	sinal=sinal*-1
	expoente=expoente+2
	contador=contador+1
print(round(soma,10))
-- EXECUTION TIME:
0.154293
-- ERROR:
  File "/home/codebench/codes/1716/2505/main.py", line 8
    while=(contador<k):
         ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-14 16:37:48) 
-- CODE:
from math import *
x=eval(input("x:"))
k=int(input("k:"))
contador=1
sinal=-1
resultado = x
expoente=3
while=(contador<k):
	resultado=resultado+(sinal*(x**expoente/factorial(expoente)))
	sinal=sinal*-1
	expoente=expoente+2
	contador=contador+1
print(round(soma,10))
-- EXECUTION TIME:
0.229125
-- ERROR:
  File "/home/codebench/codes/1716/2505/main.py", line 8
    while=(contador<k):
         ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-14 16:37:48) 
-- CODE:
from math import *
x=eval(input("x:"))
k=int(input("k:"))
contador=1
sinal=-1
resultado = x
expoente=3
while=(contador<k):
	resultado=resultado+(sinal*(x**expoente/factorial(expoente)))
	sinal=sinal*-1
	expoente=expoente+2
	contador=contador+1
print(round(soma,10))
-- EXECUTION TIME:
0.310483
-- ERROR:
  File "/home/codebench/codes/1716/2505/main.py", line 8
    while=(contador<k):
         ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-14 16:37:48) 
-- CODE:
from math import *
x=eval(input("x:"))
k=int(input("k:"))
contador=1
sinal=-1
resultado = x
expoente=3
while=(contador<k):
	resultado=resultado+(sinal*(x**expoente/factorial(expoente)))
	sinal=sinal*-1
	expoente=expoente+2
	contador=contador+1
print(round(soma,10))
-- EXECUTION TIME:
0.379327
-- ERROR:
  File "/home/codebench/codes/1716/2505/main.py", line 8
    while=(contador<k):
         ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-14 16:37:48) 
-- CODE:
from math import *
x=eval(input("x:"))
k=int(input("k:"))
contador=1
sinal=-1
resultado = x
expoente=3
while=(contador<k):
	resultado=resultado+(sinal*(x**expoente/factorial(expoente)))
	sinal=sinal*-1
	expoente=expoente+2
	contador=contador+1
print(round(soma,10))
-- EXECUTION TIME:
0.473193
-- ERROR:
  File "/home/codebench/codes/1716/2505/main.py", line 8
    while=(contador<k):
         ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-14 16:37:48) 
-- CODE:
from math import *
x=eval(input("x:"))
k=int(input("k:"))
contador=1
sinal=-1
resultado = x
expoente=3
while=(contador<k):
	resultado=resultado+(sinal*(x**expoente/factorial(expoente)))
	sinal=sinal*-1
	expoente=expoente+2
	contador=contador+1
print(round(soma,10))
-- EXECUTION TIME:
0.643855
-- ERROR:
  File "/home/codebench/codes/1716/2505/main.py", line 8
    while=(contador<k):
         ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-14 16:37:50) 
-- CODE:
from math import *
x=eval(input("x:"))
k=int(input("k:"))
contador=1
sinal=-1
resultado = x
expoente=3
while=(contador<k):
	resultado=resultado+(sinal*(x**expoente/factorial(expoente)))
	sinal=sinal*-1
	expoente=expoente+2
	contador=contador+1
print(round(soma,10))
-- EXECUTION TIME:
0.221227
-- ERROR:
  File "/home/codebench/codes/1716/2505/main.py", line 8
    while=(contador<k):
         ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-14 16:37:50) 
-- CODE:
from math import *
x=eval(input("x:"))
k=int(input("k:"))
contador=1
sinal=-1
resultado = x
expoente=3
while=(contador<k):
	resultado=resultado+(sinal*(x**expoente/factorial(expoente)))
	sinal=sinal*-1
	expoente=expoente+2
	contador=contador+1
print(round(soma,10))
-- EXECUTION TIME:
0.418005
-- ERROR:
  File "/home/codebench/codes/1716/2505/main.py", line 8
    while=(contador<k):
         ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-14 16:37:50) 
-- CODE:
from math import *
x=eval(input("x:"))
k=int(input("k:"))
contador=1
sinal=-1
resultado = x
expoente=3
while=(contador<k):
	resultado=resultado+(sinal*(x**expoente/factorial(expoente)))
	sinal=sinal*-1
	expoente=expoente+2
	contador=contador+1
print(round(soma,10))
-- EXECUTION TIME:
0.563174
-- ERROR:
  File "/home/codebench/codes/1716/2505/main.py", line 8
    while=(contador<k):
         ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-14 16:37:50) 
-- CODE:
from math import *
x=eval(input("x:"))
k=int(input("k:"))
contador=1
sinal=-1
resultado = x
expoente=3
while=(contador<k):
	resultado=resultado+(sinal*(x**expoente/factorial(expoente)))
	sinal=sinal*-1
	expoente=expoente+2
	contador=contador+1
print(round(soma,10))
-- EXECUTION TIME:
0.778134
-- ERROR:
  File "/home/codebench/codes/1716/2505/main.py", line 8
    while=(contador<k):
         ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-14 16:37:50) 
-- CODE:
from math import *
x=eval(input("x:"))
k=int(input("k:"))
contador=1
sinal=-1
resultado = x
expoente=3
while=(contador<k):
	resultado=resultado+(sinal*(x**expoente/factorial(expoente)))
	sinal=sinal*-1
	expoente=expoente+2
	contador=contador+1
print(round(soma,10))
-- EXECUTION TIME:
0.72243
-- ERROR:
  File "/home/codebench/codes/1716/2505/main.py", line 8
    while=(contador<k):
         ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-14 16:37:50) 
-- CODE:
from math import *
x=eval(input("x:"))
k=int(input("k:"))
contador=1
sinal=-1
resultado = x
expoente=3
while=(contador<k):
	resultado=resultado+(sinal*(x**expoente/factorial(expoente)))
	sinal=sinal*-1
	expoente=expoente+2
	contador=contador+1
print(round(soma,10))
-- EXECUTION TIME:
0.710226
-- ERROR:
  File "/home/codebench/codes/1716/2505/main.py", line 8
    while=(contador<k):
         ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-14 16:37:51) 
-- CODE:
from math import *
x=eval(input("x:"))
k=int(input("k:"))
contador=1
sinal=-1
resultado = x
expoente=3
while=(contador<k):
	resultado=resultado+(sinal*(x**expoente/factorial(expoente)))
	sinal=sinal*-1
	expoente=expoente+2
	contador=contador+1
print(round(soma,10))
-- EXECUTION TIME:
0.426761
-- ERROR:
  File "/home/codebench/codes/1716/2505/main.py", line 8
    while=(contador<k):
         ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-14 16:37:51) 
-- CODE:
from math import *
x=eval(input("x:"))
k=int(input("k:"))
contador=1
sinal=-1
resultado = x
expoente=3
while=(contador<k):
	resultado=resultado+(sinal*(x**expoente/factorial(expoente)))
	sinal=sinal*-1
	expoente=expoente+2
	contador=contador+1
print(round(soma,10))
-- EXECUTION TIME:
0.493744
-- ERROR:
  File "/home/codebench/codes/1716/2505/main.py", line 8
    while=(contador<k):
         ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-14 16:37:51) 
-- CODE:
from math import *
x=eval(input("x:"))
k=int(input("k:"))
contador=1
sinal=-1
resultado = x
expoente=3
while=(contador<k):
	resultado=resultado+(sinal*(x**expoente/factorial(expoente)))
	sinal=sinal*-1
	expoente=expoente+2
	contador=contador+1
print(round(soma,10))
-- EXECUTION TIME:
0.460473
-- ERROR:
sh: 1: cannot open /home/codebench/codes/1716/2505/cbtemp.txt: No such file

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-14 16:37:52) 
-- CODE:
from math import *
x=eval(input("x:"))
k=int(input("k:"))
contador=1
sinal=-1
resultado = x
expoente=3
while=(contador<k):
	resultado=resultado+(sinal*(x**expoente/factorial(expoente)))
	sinal=sinal*-1
	expoente=expoente+2
	contador=contador+1
print(round(soma,10))
-- EXECUTION TIME:
0.444848
-- ERROR:
  File "/home/codebench/codes/1716/2505/main.py", line 8
    while=(contador<k):
         ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-14 16:37:52) 
-- CODE:
from math import *
x=eval(input("x:"))
k=int(input("k:"))
contador=1
sinal=-1
resultado = x
expoente=3
while=(contador<k):
	resultado=resultado+(sinal*(x**expoente/factorial(expoente)))
	sinal=sinal*-1
	expoente=expoente+2
	contador=contador+1
print(round(soma,10))
-- EXECUTION TIME:
0.44596
-- ERROR:
  File "/home/codebench/codes/1716/2505/main.py", line 8
    while=(contador<k):
         ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-14 16:37:52) 
-- CODE:
from math import *
x=eval(input("x:"))
k=int(input("k:"))
contador=1
sinal=-1
resultado = x
expoente=3
while=(contador<k):
	resultado=resultado+(sinal*(x**expoente/factorial(expoente)))
	sinal=sinal*-1
	expoente=expoente+2
	contador=contador+1
print(round(soma,10))
-- EXECUTION TIME:
0.550297
-- ERROR:
  File "/home/codebench/codes/1716/2505/main.py", line 8
    while=(contador<k):
         ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-14 16:37:53) 
-- CODE:
from math import *
x=eval(input("x:"))
k=int(input("k:"))
contador=1
sinal=-1
resultado = x
expoente=3
while=(contador<k):
	resultado=resultado+(sinal*(x**expoente/factorial(expoente)))
	sinal=sinal*-1
	expoente=expoente+2
	contador=contador+1
print(round(soma,10))
-- EXECUTION TIME:
0.174641
-- ERROR:
sh: 1: cannot open /home/codebench/codes/1716/2505/cbtemp.txt: No such file

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-14 16:37:53) 
-- CODE:
from math import *
x=eval(input("x:"))
k=int(input("k:"))
contador=1
sinal=-1
resultado = x
expoente=3
while=(contador<k):
	resultado=resultado+(sinal*(x**expoente/factorial(expoente)))
	sinal=sinal*-1
	expoente=expoente+2
	contador=contador+1
print(round(soma,10))
-- EXECUTION TIME:
0.28626
-- ERROR:
  File "/home/codebench/codes/1716/2505/main.py", line 8
    while=(contador<k):
         ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-14 16:37:53) 
-- CODE:
from math import *
x=eval(input("x:"))
k=int(input("k:"))
contador=1
sinal=-1
resultado = x
expoente=3
while=(contador<k):
	resultado=resultado+(sinal*(x**expoente/factorial(expoente)))
	sinal=sinal*-1
	expoente=expoente+2
	contador=contador+1
print(round(soma,10))
-- EXECUTION TIME:
0.188673
-- ERROR:
  File "/home/codebench/codes/1716/2505/main.py", line 8
    while=(contador<k):
         ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-14 16:37:53) 
-- CODE:
from math import *
x=eval(input("x:"))
k=int(input("k:"))
contador=1
sinal=-1
resultado = x
expoente=3
while=(contador<k):
	resultado=resultado+(sinal*(x**expoente/factorial(expoente)))
	sinal=sinal*-1
	expoente=expoente+2
	contador=contador+1
print(round(soma,10))
-- EXECUTION TIME:
0.654744
-- ERROR:
  File "/home/codebench/codes/1716/2505/main.py", line 8
    while=(contador<k):
         ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-14 16:37:53) 
-- CODE:
from math import *
x=eval(input("x:"))
k=int(input("k:"))
contador=1
sinal=-1
resultado = x
expoente=3
while=(contador<k):
	resultado=resultado+(sinal*(x**expoente/factorial(expoente)))
	sinal=sinal*-1
	expoente=expoente+2
	contador=contador+1
print(round(soma,10))
-- EXECUTION TIME:
0.718006
-- ERROR:
  File "/home/codebench/codes/1716/2505/main.py", line 8
    while=(contador<k):
         ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-14 16:37:53) 
-- CODE:
from math import *
x=eval(input("x:"))
k=int(input("k:"))
contador=1
sinal=-1
resultado = x
expoente=3
while=(contador<k):
	resultado=resultado+(sinal*(x**expoente/factorial(expoente)))
	sinal=sinal*-1
	expoente=expoente+2
	contador=contador+1
print(round(soma,10))
-- EXECUTION TIME:
0.686192
-- ERROR:
  File "/home/codebench/codes/1716/2505/main.py", line 8
    while=(contador<k):
         ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-14 16:37:54) 
-- CODE:
from math import *
x=eval(input("x:"))
k=int(input("k:"))
contador=1
sinal=-1
resultado = x
expoente=3
while=(contador<k):
	resultado=resultado+(sinal*(x**expoente/factorial(expoente)))
	sinal=sinal*-1
	expoente=expoente+2
	contador=contador+1
print(round(soma,10))
-- EXECUTION TIME:
0.38314
-- ERROR:
  File "/home/codebench/codes/1716/2505/main.py", line 8
    while=(contador<k):
         ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-14 16:37:55) 
-- CODE:
from math import *
x=eval(input("x:"))
k=int(input("k:"))
contador=1
sinal=-1
resultado = x
expoente=3
while=(contador<k):
	resultado=resultado+(sinal*(x**expoente/factorial(expoente)))
	sinal=sinal*-1
	expoente=expoente+2
	contador=contador+1
print(round(soma,10))
-- EXECUTION TIME:
0.361816
-- ERROR:
sh: 1: cannot open /home/codebench/codes/1716/2505/cbtemp.txt: No such file

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-14 16:37:55) 
-- CODE:
from math import *
x=eval(input("x:"))
k=int(input("k:"))
contador=1
sinal=-1
resultado = x
expoente=3
while=(contador<k):
	resultado=resultado+(sinal*(x**expoente/factorial(expoente)))
	sinal=sinal*-1
	expoente=expoente+2
	contador=contador+1
print(round(soma,10))
-- EXECUTION TIME:
0.57785
-- ERROR:
  File "/home/codebench/codes/1716/2505/main.py", line 8
    while=(contador<k):
         ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-14 16:37:55) 
-- CODE:
from math import *
x=eval(input("x:"))
k=int(input("k:"))
contador=1
sinal=-1
resultado = x
expoente=3
while=(contador<k):
	resultado=resultado+(sinal*(x**expoente/factorial(expoente)))
	sinal=sinal*-1
	expoente=expoente+2
	contador=contador+1
print(round(soma,10))
-- EXECUTION TIME:
0.460165
-- ERROR:
  File "/home/codebench/codes/1716/2505/main.py", line 8
    while=(contador<k):
         ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-14 16:37:55) 
-- CODE:
from math import *
x=eval(input("x:"))
k=int(input("k:"))
contador=1
sinal=-1
resultado = x
expoente=3
while=(contador<k):
	resultado=resultado+(sinal*(x**expoente/factorial(expoente)))
	sinal=sinal*-1
	expoente=expoente+2
	contador=contador+1
print(round(soma,10))
-- EXECUTION TIME:
0.52519
-- ERROR:
  File "/home/codebench/codes/1716/2505/main.py", line 8
    while=(contador<k):
         ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-14 16:37:55) 
-- CODE:
from math import *
x=eval(input("x:"))
k=int(input("k:"))
contador=1
sinal=-1
resultado = x
expoente=3
while=(contador<k):
	resultado=resultado+(sinal*(x**expoente/factorial(expoente)))
	sinal=sinal*-1
	expoente=expoente+2
	contador=contador+1
print(round(soma,10))
-- EXECUTION TIME:
0.402995
-- ERROR:
  File "/home/codebench/codes/1716/2505/main.py", line 8
    while=(contador<k):
         ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-14 16:37:55) 
-- CODE:
from math import *
x=eval(input("x:"))
k=int(input("k:"))
contador=1
sinal=-1
resultado = x
expoente=3
while=(contador<k):
	resultado=resultado+(sinal*(x**expoente/factorial(expoente)))
	sinal=sinal*-1
	expoente=expoente+2
	contador=contador+1
print(round(soma,10))
-- EXECUTION TIME:
0.627962
-- ERROR:
  File "/home/codebench/codes/1716/2505/main.py", line 8
    while=(contador<k):
         ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-14 16:37:55) 
-- CODE:
from math import *
x=eval(input("x:"))
k=int(input("k:"))
contador=1
sinal=-1
resultado = x
expoente=3
while=(contador<k):
	resultado=resultado+(sinal*(x**expoente/factorial(expoente)))
	sinal=sinal*-1
	expoente=expoente+2
	contador=contador+1
print(round(soma,10))
-- EXECUTION TIME:
0.328904
-- ERROR:
sh: 1: cannot open /home/codebench/codes/1716/2505/cbtemp.txt: No such file

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-14 16:38:57) 
-- CODE:
from math import *
x=eval(input("x:"))
k=int(input("k:"))
contador=1
sinal=-1
resultado = x
expoente=3
while=(contador<k):
	resultado=resultado+(sinal*((x**expoente)/factorial(expoente)))
	sinal=sinal*-1
	expoente=expoente+2
	contador=contador+1
print(round(soma,10))
-- EXECUTION TIME:
0.145187
-- ERROR:
  File "/home/codebench/codes/1716/2505/main.py", line 8
    while=(contador<k):
         ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-14 16:40:03) 
-- CODE:
from math import *
x=eval(input("x:"))
k=int(input("k:"))
contador=1
sinal=-1
resultado = x
expoente=3
while=(contador<k):
	resultado=resultado+(sinal*((x**expoente)/factorial(expoente)))
	sinal=sinal*-1
	expoente=expoente+2
	contador=contador+1
print(round(soma,10))
-- EXECUTION TIME:
0.175013
-- ERROR:
  File "/home/codebench/codes/1716/2505/main.py", line 8
    while=(contador<k):
         ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-14 16:40:04) 
-- CODE:
from math import *
x=eval(input("x:"))
k=int(input("k:"))
contador=1
sinal=-1
resultado = x
expoente=3
while=(contador<k):
	resultado=resultado+(sinal*((x**expoente)/factorial(expoente)))
	sinal=sinal*-1
	expoente=expoente+2
	contador=contador+1
print(round(soma,10))
-- EXECUTION TIME:
0.154125
-- ERROR:
  File "/home/codebench/codes/1716/2505/main.py", line 8
    while=(contador<k):
         ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 16:41:01) 
-- CODE:
from math import *
x=eval(input("x:"))
k=int(input("k:"))
contador=1
sinal=-1
resultado = x
expoente=3
while=(contador<k):
	resultado = resultado + sinal*((x**expoente)/factorial(expoente))
	sinal = sinal*-1
	expoente = expoente+2
	contador = contador+1
print(round(resultado,10))
-- ERROR:
File "XXXX", line 8
    while=(contador<k):
         ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 16:41:11) 
-- CODE:
from math import *
x=eval(input("x:"))
k=int(input("k:"))
contador=1
sinal=-1
resultado = x
expoente=3
while contador<k:
	resultado = resultado + sinal*((x**expoente)/factorial(expoente))
	sinal = sinal*-1
	expoente = expoente+2
	contador = contador+1
print(round(resultado,10))
-- OUTPUT:
1.0000035426
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-14 16:41:12) 
-- CODE:
from math import *
x=eval(input("x:"))
k=int(input("k:"))
contador=1
sinal=-1
resultado = x
expoente=3
while contador<k:
	resultado = resultado + sinal*((x**expoente)/factorial(expoente))
	sinal = sinal*-1
	expoente = expoente+2
	contador = contador+1
print(round(resultado,10))
-- EXECUTION TIME:
0.229313
-- TEST CASE 1:
---- input:
pi/2
5
---- correct output:
1.0000035426
---- user output:
1.0000035426
-- TEST CASE 2:
---- input:
-pi/2
4
---- correct output:
-0.9998431014
---- user output:
-0.9998431014
-- TEST CASE 3:
---- input:
pi/3
3
---- correct output:
0.8662952838
---- user output:
0.8662952838
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 16:41:47) 
-- CODE:
from math import *
x=eval(input("x:"))
k=int(input("k:"))
contador=1
sinal=-1
resultado = x
expoente=3
while contador<k:
	resultado = resultado + sinal*((x**expoente)/factorial(expoente))
	sinal = sinal*-1
	expoente = expoente+2
	contador = contador+1
print(round(resultado,10))
-- OUTPUT:
1.0000035426
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-14 16:41:48) 
-- CODE:
from math import *
x=eval(input("x:"))
k=int(input("k:"))
contador=1
sinal=-1
resultado = x
expoente=3
while contador<k:
	resultado = resultado + sinal*((x**expoente)/factorial(expoente))
	sinal = sinal*-1
	expoente = expoente+2
	contador = contador+1
print(round(resultado,10))
-- EXECUTION TIME:
0.152551
-- TEST CASE 1:
---- input:
pi/2
5
---- correct output:
1.0000035426
---- user output:
1.0000035426
-- TEST CASE 2:
---- input:
-pi/2
4
---- correct output:
-0.9998431014
---- user output:
-0.9998431014
-- TEST CASE 3:
---- input:
pi/3
3
---- correct output:
0.8662952838
---- user output:
0.8662952838
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
